animation mobile fix

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -71,42 +71,48 @@ section {
   }
 }
 
-// ANIMATIONS
-
-.hidden {
-  opacity: 0;
-  filter: blur(5px);
-  transform: translateX(-100%);
-  transition: all 1s;
-}
-
-.show {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateX(0);
-}
-
-.column:nth-child(1){
-  :nth-child(2){
-    transition-delay: 200ms;
-  }
-}
-.column:nth-child(2){
-  :nth-child(1){
-    transition-delay: 400ms;
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .hidden {
-    transition: none;
-  }
-}
-
 @media screen and (max-width: 800px) {
   .overview-grid {
     & .column {
       width: 100%;
+
+      &:nth-child(1) {
+        :nth-child(2) {
+          transition-delay: 200ms;
+        }
+      }
+
+      &:nth-child(2) {
+        :nth-child(1) {
+          transition-delay: 400ms;
+        }
+      }
     }
   }
+
+  .filler {
+    height: 500px;
+  }
+
+  // ANIMATIONS
+
+  @media (prefers-reduced-motion) {
+    .hidden {
+      transition: none;
+    }
+  }
+  .hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 0.8s ease-in-out;
+  }
+
+  .show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+  }
+
+  /////////////////////////
 }
